@@ -22,6 +22,8 @@
  +-------------------------------------------------------------------------+
 */
 
+define("CACTI_ESCAPE_CHARACTER", "\"");
+
 define("HOST_GROUPING_GRAPH_TEMPLATE", 1);
 define("HOST_GROUPING_DATA_QUERY_INDEX", 2);
 
