@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 SVN
 -bug: Warning in lib/snmp.php by misspelled variable
+-bug: Use windows-aware escapeshellarg
 -bug#0001747: oid_suffix doesn't work for direction input 
 -bug#0001763: Adding permissions doesn't work 
 -bug#0001765: "Tech Support" report indicates error with RRDTool 1.4.x
